# dicom-insight

./: .gitignore  LICENSE  README.md  dicom_insight.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
dicom_insight/: __init__.py  __main__.py  api.py  cli.py  explainer.py  formatter.py  heuristics.py  llm.py  models.py  reader.py
examples/: example.py
tests/: test_core.py
